syntax = "proto3";

package grpc_end;

service End {
    // 处理网关请求
    rpc DoRequest (Request) returns (Response) {}
}

message Request {
    // 请求的controller
    string controller = 1;

    // 请求的action
    string action = 2;

    // 请求附带的所有参数
    map<string, string> params = 3;

    // 请求附带的文件, key为文件字段名，val为文件的原始数据
    map<string, bytes> files = 4;

    // 网关补全的字段
    map<string, string> header = 5;
}

message Response {
    // 供网关确认业务是否成功
    bool success = 1;

    // 供网关执行业务
    string userId = 2;

    // 供网关执行业务
    string orgId = 3;

    // 用户的访问权限
    int32 userLevel = 4;

    // 实际返回给客户端的数据，网关将原样交给客户端
    bytes data = 5;
}
